# lol-history

./: .gitignore  README.md
Api/: app.py  history_cache.json  match_cache.json  mongo.py  player_cache.json  requirements.txt  riot_api.py  utils.py
Frontend/: index.html  package.json  tailwind.config.cjs
Frontend/src/: App.css  App.jsx  index.css  main.jsx
Frontend/src/Components/: History.jsx  HistoryHeader.jsx  HistoryHeaderInfo.jsx  Match.jsx  MatchCard.jsx  Player.jsx  RuneUtils.js
Frontend/src/Components/skeleton/: HistoryHeaderSkeleton.jsx  MatchCardSkeleton.jsx  PlayerSkeleton.jsx
Frontend/src/jsons/: items.json  queues.json  runesReforged.json
Frontend/src/pages/: History.jsx  Home.jsx  Match.jsx
Frontend/src/services/: queryClient.js
backend/: Cargo.toml  app.py  constants.py  mongo.py  requirements.txt  utils.py
backend/src/: main.rs
backend/src/routes/: handlers.rs  mod.rs  mongo.rs  router.rs  utils.rs
backend/src/routes/models/: match_data.rs  match_ids.rs  player.rs
backend/src/routes/types/: endpoint.rs  match_data.rs  mod.rs  player.rs
backend/static/assets/: index.345776a5.js  index.5f6491f3.css  index.9e5811fe.css  index.c6fb6d83.js  index.d5cb6e21.css  index.f1ea3b95.js  script.js  styles.css
backend/templates/: index.html
